@@ -26,6 +26,7 @@ Version 1.4.5 (07/12/2006) "Wiggles"
   * Enhanced the problem table that appears on validation or ananalyis to display a tooltip with the full text of
     the problem text when the mouse hovers overs a particular problem.
   * Enhanced the editor so that it now wraps text on labels when labbels get overly long.
+  * Enhanced the editor so that the status bar changes to indicate what it's doing when manipulating long-running file operations.
 
 Version 1.4.4 (29/11/2006) "MoreMoe"
   * Upgraded the editor to fix some bugs in reset net analysis and to include reduction rules for specification analysis.
